<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_1">纯数字键盘：</string>
    <string name="title_2">字母键盘：</string>
    <string name="key_page">翻页</string>
    <string name="key_page_value">page</string>
    <string name="key_char">字母</string>
    <string name="key_char_value">char</string>
    <string name="key_del">删</string>
    <string name="key_del_value">del</string>
    <string name="key_finish">ok</string>
    <string name="key_finish_value">finish</string>
    <string name="key_character">符号</string>
    <string name="key_character_value">character</string>
    <string name="key_character_lower_value">lower</string>
    <string name="key_character_upper_value">upper</string>
    <string name="key_empty_value">empty</string>

    <!-- 这里特殊字符是需要转义的 -->
    <string name="key_symbol_0">,</string>
    <string name="key_symbol_1">.</string>
    <string name="key_symbol_2">!</string>
    <string name="key_symbol_3">\?</string>
    <string name="key_symbol_4">:</string>
    <string name="key_symbol_5">;</string>
    <string name="key_symbol_6">\'</string>
    <string name="key_symbol_7">\"</string>
    <string name="key_symbol_8">×</string>
    <string name="key_symbol_9">+</string>
    <string name="key_symbol_10">-</string>
    <string name="key_symbol_11">=</string>
    <string name="key_symbol_12">#</string>
    <string name="key_symbol_13">$</string>
    <string name="key_symbol_14">%</string>
    <string name="key_symbol_15">\&#064;</string>
    <string name="key_symbol_16">(</string>
    <string name="key_symbol_17">)</string>
    <string name="key_symbol_18">{</string>
    <string name="key_symbol_19">}</string>
    <string name="key_symbol_20">[</string>
    <string name="key_symbol_21">]</string>
    <string name="key_symbol_22">&#060;</string>
    <string name="key_symbol_23">&#062;</string>
    <string name="key_symbol_24">/</string>
    <string name="key_symbol_25">_</string>
    <string name="key_symbol_26">^</string>
    <string name="key_symbol_27">&#038;</string>
    <string name="key_symbol_28">`</string>
    <string name="key_symbol_29">~</string>
    <string name="key_symbol_30">|</string>
    <string name="key_symbol_31">\\</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_a">a</string>
    <string name="key_b">b</string>
    <string name="key_c">c</string>
    <string name="key_d">d</string>
    <string name="key_e">e</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_i">i</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_m">m</string>
    <string name="key_n">n</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_q">q</string>
    <string name="key_r">r</string>
    <string name="key_s">s</string>
    <string name="key_t">t</string>
    <string name="key_u">u</string>
    <string name="key_v">v</string>
    <string name="key_w">w</string>
    <string name="key_x">x</string>
    <string name="key_y">y</string>
    <string name="key_z">z</string>
    <string name="key_a_1">A</string>
    <string name="key_b_1">B</string>
    <string name="key_c_1">C</string>
    <string name="key_d_1">D</string>
    <string name="key_e_1">E</string>
    <string name="key_f_1">F</string>
    <string name="key_g_1">G</string>
    <string name="key_h_1">H</string>
    <string name="key_i_1">I</string>
    <string name="key_j_1">J</string>
    <string name="key_k_1">K</string>
    <string name="key_l_1">L</string>
    <string name="key_m_1">M</string>
    <string name="key_n_1">N</string>
    <string name="key_o_1">O</string>
    <string name="key_p_1">P</string>
    <string name="key_q_1">Q</string>
    <string name="key_r_1">R</string>
    <string name="key_s_1">S</string>
    <string name="key_t_1">T</string>
    <string name="key_u_1">U</string>
    <string name="key_v_1">V</string>
    <string name="key_w_1">W</string>
    <string name="key_x_1">X</string>
    <string name="key_y_1">Y</string>
    <string name="key_z_1">Z</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_cloud">CloudActivity</string>

</resources>
