<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/keyboard_bg"
    android:orientation="horizontal"
    android:id="@+id/llNumberKeyboard"
    android:paddingBottom="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="30dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_1"
                style="@style/key_base"
                android:tag="@string/key_1"
                android:text="@string/key_1" />

            <TextView
                android:id="@+id/tv_2"
                style="@style/key_base"
                android:tag="@string/key_2"
                android:text="@string/key_2" />

            <TextView
                android:id="@+id/tv_3"
                style="@style/key_base"
                android:tag="@string/key_3"
                android:text="@string/key_3" />

            <TextView
                android:id="@+id/tv_4"
                style="@style/key_base"
                android:tag="@string/key_4"
                android:text="@string/key_4" />

            <TextView
                android:id="@+id/tv_5"
                style="@style/key_base"
                android:tag="@string/key_5"
                android:text="@string/key_5" />

            <TextView
                android:id="@+id/tv_6"
                style="@style/key_base"
                android:tag="@string/key_6"
                android:text="@string/key_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_7"
                style="@style/key_base"
                android:tag="@string/key_7"
                android:text="@string/key_7" />

            <TextView
                android:id="@+id/tv_8"
                style="@style/key_base"
                android:tag="@string/key_8"
                android:text="@string/key_8" />

            <TextView
                android:id="@+id/tv_9"
                style="@style/key_base"
                android:tag="@string/key_9"
                android:text="@string/key_9" />

            <TextView
                android:id="@+id/tv_10"
                style="@style/key_base"
                android:tag="@string/key_0"
                android:text="@string/key_0" />

            <TextView
                android:id="@+id/tv_12"
                style="@style/key_base"
                android:tag="@string/key_symbol_1"
                android:text="@string/key_symbol_1" />

            <TextView
                android:id="@+id/tv_11"
                style="@style/key_base"
                android:tag="@string/key_del_value"
                android:text="@string/key_del" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_13"
        style="@style/key_high"
        android:tag="@string/key_finish_value"
        android:text="@string/key_finish" />

</LinearLayout>